updating my detail info

--- a/index.html
+++ b/index.html
@@ -17,17 +17,33 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm not a fan of pictures, lol, but here you go. 
+        I like working out, PS4 and Xbox1 (destiny and COD3) PC (LOL). 
+        I love learning a new language; my only issue is that those around me don't speak the languages I am learning, makes it hard to keep. 
+        I studied Japanese here and lived in the summer in Japan, which was awesome. 
+        I did not study Japanese because of animes lol, it was because my mom's best friend was Japanese (Okinawa born and grew up in Tokyo then the US). 
+        She was like my second mom, who raised me in Japanese culture. 
+        I learned to speak Japanese first before Castilian or English. 
+        As I grew up, I lost the ability to speak Japanese. 
+        I studied it during my college years and went to school for the summer.
+        I had close friends there, so housing was awesome living with them. 
+        I love C# programing took a few classes, but Fullerton does not offer much, so I was super sad. 
+        I also wanted to take some python, but not too many classes offered for that language. 
+        But, I know since I got into computers that I want to do programming. 
+        I love cooking and trying out new stuff, and I love outdoor sports; they are the best. 
+        I am in love with J/K/C/TH/V foods all A-foods, O_o. 
+        Basically, I try something new but no pork lol, because I am severely allergic to it due to the chemicals they use to process that meat.  
+        My friend from Santa Cruz :smiling_face_with_3_hearts: ~_^</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Monterey Park</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Swimming, working out, outdoor sports, and video games vO_ov</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Game Devaloper in the C# language *_*v</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Currently living in L.A. *_^</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Its the first step to becoming a Game developer! O_ov</p>
     </section>
 
     <footer id="footer">
